# cairn

./: .gitignore  README.md  devenv.nix  pyproject.toml
docs/: design.md  hashing-sketch.md  motivation.md  patterns.md
docs/todo/: anyio.md  nominal-identity.md
examples/: claude.py  failure_resume.py  hitl.py  research_fake_llm.py  research_haiku.py  research_pipeline.py  rlhf_mock.py  scraper.py
src/cairn/: __init__.py  cli.py  context.py  core.py  hash.py  patterns.py  run.py  serial.py  show.py  sink.py  store.py  testing.py  tui.py
src/cairn/cli/: __init__.py
src/cairn/core/: __init__.py  _step.py  context.py  hash.py  patterns.py  serial.py  sink.py  step.py  store.py  testing.py  types.py
src/cairn/interaction/: __init__.py
src/cairn/run/: __init__.py  gc.py  show.py  spans.py
src/cairn/tui/: __init__.py  app.py  render.py  sinks.py
tests/: conftest.py  test_core.py  test_disk.py  test_gc.py  test_hash.py  test_metrics.py  test_patterns.py  test_resume.py
